Update total number of pages in ebook to 600!

--- a/src/templates/en/2020/base.html
+++ b/src/templates/en/2020/base.html
@@ -17,7 +17,7 @@ Unless otherwise noted, the metrics in all of the 22 chapters of the Web Almanac
   </p>
 
   <p>
-    When I ask contributors what they enjoy most about the project, the answer is almost always about the people. We work together as teams, we support each other, and in only five months time we were able to build the equivalent of a 500+ page book! It was an enormous challenge, and while we haven&#8217;t solved the world&#8217;s problems, we&#8217;ve shown what&#8217;s possible when people choose to work together.
+    When I ask contributors what they enjoy most about the project, the answer is almost always about the people. We work together as teams, we support each other, and in only five months time we were able to build the equivalent of a 600 page book! It was an enormous challenge, and while we haven&#8217;t solved the world&#8217;s problems, we&#8217;ve shown what&#8217;s possible when people choose to work together.
   </p>
 
   <p>
