--- a/src/templates/fr/2020/base.html
+++ b/src/templates/fr/2020/base.html
@@ -16,7 +16,7 @@ Sauf indication contraire, les statistiques des 22 chapitres du Web Almanac prov
 </p>
 
 <p>
-  Chaque fois que je demande aux personnes ayant contribué ce qu’elles apprécient le plus dans le projet, la réponse concerne presque toujours les gens. Nous travaillons en équipe, nous nous soutenons mutuellement et, en cinq mois seulement, nous sommes capables de construire l’équivalent d’un livre de plus de 500 pages ! C’est un énorme défi, et bien que nous n’ayons pas résolu les problèmes du monde, nous avons montré ce qui est possible lorsque les gens choisissent de travailler ensemble.
+  Chaque fois que je demande aux personnes ayant contribué ce qu’elles apprécient le plus dans le projet, la réponse concerne presque toujours les gens. Nous travaillons en équipe, nous nous soutenons mutuellement et, en cinq mois seulement, nous sommes capables de construire l’équivalent d’un livre de de 600 pages ! C’est un énorme défi, et bien que nous n’ayons pas résolu les problèmes du monde, nous avons montré ce qui est possible lorsque les gens choisissent de travailler ensemble.
 </p>
 
 <p>
