--- a/src/templates/nl/2020/base.html
+++ b/src/templates/nl/2020/base.html
@@ -17,7 +17,7 @@ Tenzij anders vermeld, zijn de statistieken in alle 22 hoofdstukken van de Web A
   </p>
 
   <p>
-    Als ik de bijdragers vraag wat ze het leukst vinden aan het project, gaat het antwoord bijna altijd over de mensen. We werken samen als teams, we ondersteunen elkaar en in slechts vijf maanden zijn we in staat om het equivalent van een boek van meer dan 500 pagina's te bouwen! Het is een enorme uitdaging, en hoewel we de problemen van de wereld niet hebben opgelost, hebben we laten zien wat er mogelijk is als mensen ervoor kiezen om samen te werken.
+    Als ik de bijdragers vraag wat ze het leukst vinden aan het project, gaat het antwoord bijna altijd over de mensen. We werken samen als teams, we ondersteunen elkaar en in slechts vijf maanden zijn we in staat om het equivalent van een boek van 600 pagina's te bouwen! Het is een enorme uitdaging, en hoewel we de problemen van de wereld niet hebben opgelost, hebben we laten zien wat er mogelijk is als mensen ervoor kiezen om samen te werken.
   </p>
 
   <p>
