--- a/src/templates/uk/2020/base.html
+++ b/src/templates/uk/2020/base.html
@@ -17,7 +17,7 @@
   </p>
 
   <p>
-    Коли я запитую контриб’юторів, що їм найбільше подобається у проекті, відповідь майже завжди стосується людей. Ми працюємо разом як команда, ми підтримуємо один одного, і всього лише в п’ятимісячний термін ми змогли створити еквівалент книжки розміром більше, ніж 500 сторінок! Це неймовірний виклик і хоча ми не вирішили проблеми всесвітнього рівня, ми продемонстрували, на що спроможні люди, які вирішили працювати в команді.
+    Коли я запитую контриб’юторів, що їм найбільше подобається у проекті, відповідь майже завжди стосується людей. Ми працюємо разом як команда, ми підтримуємо один одного, і всього лише в п’ятимісячний термін ми змогли створити еквівалент книжки розміром, 600 сторінок! Це неймовірний виклик і хоча ми не вирішили проблеми всесвітнього рівня, ми продемонстрували, на що спроможні люди, які вирішили працювати в команді.
   </p>
 
   <p>
