Consolidate home page methodology text

--- a/src/templates/it/2019/base.html
+++ b/src/templates/it/2019/base.html
@@ -2,10 +2,8 @@
 
 {% block methodology_stat_1 %}5.8M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block methodology_description %}
-Se non diversamente specificato, le metriche in tutti i 20 capitoli del Web Almanac provengono dal dataset dell'archivio HTTP. HTTP Archive è un progetto gestito dalla comunità che tiene traccia del modo in cui è costruito il Web dal 2010. Utilizzando WebPageTest e Lighthouse "under the hood", i metadati di quasi 6 milioni di siti Web vengono testati mensilmente e inclusi in un database BigQuery pubblico per l'analisi. Il set di dati di luglio 2020 è stato utilizzato come base per le metriche del Web Almanac. Per ulteriori informazioni, vedere la pagina Methodology.
-{% endblock %}
-
+{% block total_websites %}quasi 6 milioni{% endblock %}
+{% block dataset %}luglio 2020{% endblock %}
 
 {% block foreword %}
   <p>
