--- a/src/templates/ru/2020/base.html
+++ b/src/templates/ru/2020/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}7.5 млн{% endblock %}
 {% block methodology_stat_2 %}31.3 Тб{% endblock %}
-{% block methodology_description %}
-Если не указано иное, метрики во всех 22 главах Web Almanac получены из набора данных HTTP Archive. HTTP Archive — это проект сообщества по исследованию развития веба, созданный в 2010 году. При помощи WebPageTest и Lighthouse ежемесячно проверяются метаданные около 7,5 миллионов сайтов, которые затем вносятся в общедоступную базу данных BigQuery для последующего анализа. В качестве основы для метрик отчёта Web Almanac был использован набор данных за август 2020 года. Дополнительную информацию смотрите на странице методологии.
-{% endblock %}
+{% block total_websites %}около 7,5 миллионов{% endblock %}
+{% block dataset %}август 2020{% endblock %}
 
 {% block foreword %}
 {# TODO - Write this! #}
