--- a/src/templates/uk/2020/base.html
+++ b/src/templates/uk/2020/base.html
@@ -2,10 +2,8 @@
 
 {% block methodology_stat_1 %}7,5&nbsp;млн{% endblock %}
 {% block methodology_stat_2 %}31,3&nbsp;ТБ{% endblock %}
-{% block methodology_description %}
-Якщо не вказано інше, метрики в усіх 22 розділах Web Almanac взяті з датасету HTTP Archive. HTTP Archive – це громадський проект, що відслідковує, як будується веб з 2010 року. Метадата про більш ніж 7,5 мільйонів вебсайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac був використаний як базис набір даних від серпня 2020 року. Більше інформації на сторінці Методологія.
-{% endblock %}
-
+{% block total_websites %}більш ніж 7,5 мільйонів{% endblock %}
+{% block dataset %}серпня 2020{% endblock %}
 
 {% block foreword %}
   <p>
