--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5.8M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block methodology_description %}
-Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about nearly 6 million websites are tested monthly and included in a public BigQuery database for analysis. The July 2019 dataset was used as the basis for the Web Almanac&#8217;s metrics. For more information, see the Methodology page.
-{% endblock %}
+{% block total_websites %}nearly 6 million{% endblock %}
+{% block dataset %}July 2019{% endblock %}
 
 {% block foreword %}
   <p>
