--- a/src/templates/en/2020/base.html
+++ b/src/templates/en/2020/base.html
@@ -2,10 +2,8 @@
 
 {% block methodology_stat_1 %}7.5M{% endblock %}
 {% block methodology_stat_2 %}31.3 TB{% endblock %}
-{% block methodology_description %}
-Unless otherwise noted, the metrics in all of the 22 chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about over 7.5 million websites are tested monthly and included in a public BigQuery database for analysis. The August 2020 dataset was used as the basis for the Web Almanac&#8217;s metrics. For more information, see the Methodology page.
-{% endblock %}
-
+{% block total_websites %}over 7.5 million{% endblock %}
+{% block dataset %}August 2020{% endblock %}
 
 {% block foreword %}
   <p>
