--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -116,6 +116,9 @@ The Web Almanac has been made possible by the hard work of the web community. {{
 {% block methodology_stat_1_title %}Websites Tested{% endblock %}
 {% block methodology_stat_2_title %}Data Processed{% endblock %}
 {% block methodology_link %}Learn about our Methodology{% endblock %}
+{% block methodology_description %}
+Unless otherwise noted, the metrics in all of the {{ supported_chapters | length }} chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about {{ self.total_websites() }} websites are tested monthly and included in a public BigQuery database for analysis. The {{ self.dataset() }} dataset was used as the basis for the Web Almanac&#8217;s metrics. For more information, see the Methodology page.
+{% endblock %}
 
 {% block introduction %}Introduction{% endblock %}
 
