--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5,8M{% endblock %}
 {% block methodology_stat_2 %}20,9 TB{% endblock %}
-{% block methodology_description %}
-A menos que se indique lo contrario, las métricas en los 20 capítulos del Web Almanac provienen del conjunto de datos del HTTP Archive. HTTP Archive es un proyecto administrado por la comunidad que ha estado rastreando cómo se construye la web desde 2010. Utilizando WebPageTest y Lighthouse bajo el capó, se prueban metadatos de aproximadamente 6 millones de sitios web mensualmente y se incluyen en una base de datos pública de BigQuery para su análisis. El conjunto de datos de Julio de 2019 se utilizó como base para las métricas de Web Almanac. Para obtener más información, consulte la página de Metodología.
-{% endblock %}
+{% block total_websites %}aproximadamente 6 millones{% endblock %}
+{% block dataset %}Julio de 2019{% endblock %}
 
 {% block foreword %}
   <p>
