--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -116,6 +116,9 @@ Web Almanac ha sido posible gracias al arduo trabajo de la comunidad web. {{ sel
 {% block methodology_stat_1_title %}Sitios web analizados{% endblock %}
 {% block methodology_stat_2_title %}Información procesada{% endblock %}
 {% block methodology_link %}Conozca nuestra Metodología{% endblock %}
+{% block methodology_description %}
+A menos que se indique lo contrario, las métricas en los {{ supported_chapters | length }} capítulos del Web Almanac provienen del conjunto de datos del HTTP Archive. HTTP Archive es un proyecto administrado por la comunidad que ha estado rastreando cómo se construye la web desde 2010. Utilizando WebPageTest y Lighthouse bajo el capó, se prueban metadatos de {{ self.total_websites() }} de sitios web mensualmente y se incluyen en una base de datos pública de BigQuery para su análisis. El conjunto de datos de {{ self.dataset() }} se utilizó como base para las métricas de Web Almanac. Para obtener más información, consulte la página de Metodología.
+{% endblock %}
 
 {% block introduction %}Introducción{% endblock %}
 
