--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -116,6 +116,9 @@ Le Web Almanac a été rendu possible grâce au travail acharné de la communaut
 {% block methodology_stat_1_title %}Sites Web testés{% endblock %}
 {% block methodology_stat_2_title %}Données traitées{% endblock %}
 {% block methodology_link %}En savoir plus sur la Méthodologie{% endblock %}
+{% block methodology_description %}
+Sauf indication contraire, les statistiques des {{ supported_chapters | length }} chapitres du Web Almanac proviennent du jeu de données HTTP Archive, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de {{ self.total_websites() }} de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de {{ self.dataset() }} a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
+{% endblock %}
 
 {% block introduction %}Introduction{% endblock %}
 
