--- a/src/templates/hi/2019/base.html
+++ b/src/templates/hi/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5.8M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block methodology_description %}
-जब तक अन्यथा नोट न किया जाए, Web Almanac के सभी 20 अध्यायों में मौजूद मेट्रिक्स HTTP Archive के स्रोतों से लिये जाते हैं। HTTP Archive एक समुदाय द्वारा संचालित परियोजना है, जो 2010 के बाद से वेब कैसे बनाया जा रहा है इस पर निगाह रखें हुए हैं। WebPageTest और Lighthouse का अति उत्कृष्ट उपयोग करते हुए, लगभग 6 मिलियन वेबसाइटों के बारे में मेटाडेटा को मासिक रूप से परीक्षण किया जाता है और विश्लेषण के लिए एक सार्वजनिक BigQuery डेटाबेस में शामिल किया जाता है। जुलाई 2019 डेटासेट का उपयोग Web Almanac के मैट्रिक्स के आधार के रूप में किया गया था। अधिक जानकारी के लिए, कार्यप्रणाली पृष्ठ देखें।
-{% endblock %}
+{% block total_websites %}लगभग 6 मिलियन{% endblock %}
+{% block dataset %}जुलाई 2019{% endblock %}
 
 {% block foreword %}
   <p>
