--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -116,7 +116,9 @@ Web Almanac वेब समुदाय की मेहनत से संभ
 {% block methodology_stat_1_title %}वेबसाइटों का परीक्षण किया गया{% endblock %}
 {% block methodology_stat_2_title %}डेटा संसाधित किया गया{% endblock %}
 {% block methodology_link %}हमारी कार्यप्रणाली के बारे में जानें{% endblock %}
-
+{% block methodology_description %}
+जब तक अन्यथा नोट न किया जाए, Web Almanac के सभी {{ supported_chapters | length }} अध्यायों में मौजूद मेट्रिक्स HTTP Archive के स्रोतों से लिये जाते हैं। HTTP Archive एक समुदाय द्वारा संचालित परियोजना है, जो 2010 के बाद से वेब कैसे बनाया जा रहा है इस पर निगाह रखें हुए हैं। WebPageTest और Lighthouse का अति उत्कृष्ट उपयोग करते हुए, {{ self.total_websites() }} वेबसाइटों के बारे में मेटाडेटा को मासिक रूप से परीक्षण किया जाता है और विश्लेषण के लिए एक सार्वजनिक BigQuery डेटाबेस में शामिल किया जाता है। {{ self.dataset() }} डेटासेट का उपयोग Web Almanac के मैट्रिक्स के आधार के रूप में किया गया था। अधिक जानकारी के लिए, कार्यप्रणाली पृष्ठ देखें।
+{% endblock %}
 {% block introduction %}परिचय{% endblock %}
 
 {% block foreword_title %}प्रस्तावना{% endblock %}
