--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -115,6 +115,9 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
 {% block methodology_stat_1_title %}テストしたウェブサイト{% endblock %}
 {% block methodology_stat_2_title %}処理されたデータ{% endblock %}
 {% block methodology_link %}方法論についてはこちらをご覧ください。{% endblock %}
+{% block methodology_description %}
+特に断りのない限り、Web Almanacの{{ supported_chapters | length }}章すべてのメトリクスは、HTTP Archiveのデータセットから取得しています。HTTP Archiveは、2010年以来、ウェブの構築方法を追跡してきたコミュニティが運営するプロジェクトです。WebPageTestとLighthouseをアンダーグラウンドに使用して、{{ self.total_websites() }}Webサイトに関するメタデータが毎月テストされ、分析のために公開されているBigQueryデータベースに含まれています。{{ self.dataset() }}月のデータセットは、Web Almanacのメトリクスの基礎として使用されました。詳細については、方法論のページを参照してください。
+{% endblock %}
 
 {% block introduction %}導入{% endblock %}
 
