--- a/src/templates/nl/2019/base.html
+++ b/src/templates/nl/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5.8M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block methodology_description %}
-Tenzij anders vermeld, zijn de statistieken in alle 20 hoofdstukken van de Web Almanac afkomstig uit de HTTP Archive-dataset. HTTP Archive is een door de gemeenschap gerund project dat sinds 2010 bijhoudt hoe het web is opgebouwd. Met behulp van WebPageTest en Lighthouse onder de motorkap worden maandelijks metagegevens over bijna 6 miljoen websites getest en voor analyse opgenomen in een openbare BigQuery-database. De dataset van juli 2019 werd gebruikt als basis voor de statistieken van de Web Almanac. Zie de Methodologie-pagina voor meer informatie.
-{% endblock %}
+{% block total_websites %}bijna 6 miljoen{% endblock %}
+{% block dataset %}juli 2019{% endblock %}
 
 {% block foreword %}
   <p>
