--- a/src/templates/nl/2020/base.html
+++ b/src/templates/nl/2020/base.html
@@ -2,10 +2,8 @@
 
 {% block methodology_stat_1 %}7.5M{% endblock %}
 {% block methodology_stat_2 %}31.3 TB{% endblock %}
-{% block methodology_description %}
-Tenzij anders vermeld, zijn de statistieken in alle 22 hoofdstukken van de Web Almanac afkomstig uit de HTTP Archive-dataset. HTTP Archive is een door de gemeenschap gerund project dat sinds 2010 bijhoudt hoe het web is opgebouwd. Met WebPageTest en Lighthouse onder de motorkap worden maandelijks metagegevens over meer dan 7,5 miljoen websites getest en voor analyse opgenomen in een openbare BigQuery-database. De gegevensset van augustus 2020 werd gebruikt als basis voor de statistieken van de Web Almanac. Zie de Methodologie-pagina voor meer informatie.
-{% endblock %}
-
+{% block total_websites %}meer dan 7,5 miljoen{% endblock %}
+{% block dataset %}augustus 2020{% endblock %}
 
 {% block foreword %}
   <p>
