--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -116,6 +116,9 @@ De Web Almanac is mogelijk gemaakt door het harde werk van de webgemeenschap. {{
 {% block methodology_stat_1_title %}Websites Getest{% endblock %}
 {% block methodology_stat_2_title %}Verwerkte Gegevens{% endblock %}
 {% block methodology_link %}Lees meer over onze Methodologie{% endblock %}
+{% block methodology_description %}
+Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | length }} hoofdstukken van de Web Almanac afkomstig uit de HTTP Archive-dataset. HTTP Archive is een door de gemeenschap gerund project dat sinds 2010 bijhoudt hoe het web is opgebouwd. Met WebPageTest en Lighthouse onder de motorkap worden maandelijks metagegevens over {{ self.total_websites() }} websites getest en voor analyse opgenomen in een openbare BigQuery-database. De gegevensset van {{ self.dataset() }} werd gebruikt als basis voor de statistieken van de Web Almanac. Zie de Methodologie-pagina voor meer informatie.
+{% endblock %}
 
 {% block introduction %}Introductie{% endblock %}
 
