--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -116,6 +116,9 @@ O Web Almanac Isso foi possível graças ao trabalho árduo da comunidade da web
 {% block methodology_stat_1_title %}Sites testados{% endblock %}
 {% block methodology_stat_2_title %}Dados processados{% endblock %}
 {% block methodology_link %}Conheça nossa Metodologia{% endblock %}
+{% block methodology_description %}
+Salvo indicação em contrário, as métricas em todos os {{ supported_chapters | length }} capítulos do Web Almanac são originárias do conjunto de dados do HTTP Archive. O HTTP Archive é um projeto administrado pela comunidade que acompanha como a Web é criada desde 2010. Usando o WebPageTest e o Lighthouse, os metadados de {{ self.total_websites() }} de sites são testados mensalmente e incluídos em um banco de dados público do BigQuery para análise. O conjunto de dados de {{ self.dataset() }} foi usado como base para as métricas do Web Almanac. Para mais informações, consulte a página Metodologia.
+{% endblock %}
 
 {% block introduction %}Introdução{% endblock %}
 
