--- a/src/templates/ru/2019/base.html
+++ b/src/templates/ru/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5.8 млн{% endblock %}
 {% block methodology_stat_2 %}20.9 Тб{% endblock %}
-{% block methodology_description %}
-Если не указано иное, метрики во всех 20 главах Web Almanac получены из набора данных HTTP Archive. HTTP Archive — это управляемый сообществом проект по исследованию веба с 2010 года. При помощи WebPageTest и Lighthouse ежемесячно проверяются метаданные около 6 миллионов сайтов, которые затем вносятся в общедоступную базу данных BigQuery для последующего анализа. В качестве основы для метрик Web Almanac был использован набор данных за июль 2019 года. Дополнительную информацию смотрите на странице по методологии.
-{% endblock %}
+{% block total_websites %}около 6 миллионов{% endblock %}
+{% block dataset %}июль 2019{% endblock %}
 
 {% block foreword %}
   <p>
