--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -116,6 +116,9 @@
 {% block methodology_stat_1_title %}Количество проверенных сайтов{% endblock %}
 {% block methodology_stat_2_title %}Размер обработанных данных{% endblock %}
 {% block methodology_link %}Узнать подробнее про методологию{% endblock %}
+{% block methodology_description %}
+Если не указано иное, метрики во всех {{ supported_chapters | length }} главах Web Almanac получены из набора данных HTTP Archive. HTTP Archive — это управляемый сообществом проект по исследованию веба с 2010 года. При помощи WebPageTest и Lighthouse ежемесячно проверяются метаданные {{ self.total_websites() }} сайтов, которые затем вносятся в общедоступную базу данных BigQuery для последующего анализа. В качестве основы для метрик Web Almanac был использован набор данных за {{ self.dataset() }} года. Дополнительную информацию смотрите на странице по методологии.
+{% endblock %}
 
 {% block introduction %}Введение{% endblock %}
 
