--- a/src/templates/zh-TW/2019/base.html
+++ b/src/templates/zh-TW/2019/base.html
@@ -2,9 +2,8 @@
 
 {% block methodology_stat_1 %}5.8 M{% endblock %}
 {% block methodology_stat_2 %}20.9 TB{% endblock %}
-{% block methodology_description %}
-除另有備註外，Web Almanac 網路年鑑20個章節的統計指標皆萃取自HTTP Archive數據集。HTTP Archive是社群推動的專案，自2010年開始持續追蹤網路如何建置，每月透過WebPageTest和Lighthouse測試將近6百萬個網站並將資料集公開置於BigQuery供眾分析。Web Almanac網路年鑑的統計指標採用2019年7月的數據集為基準，更多的資訊請參閱統計方法頁面。
-{% endblock %}
+{% block total_websites %}近6百萬{% endblock %}
+{% block dataset %}2019年7{% endblock %}
 
 {% block foreword %}
   <p>
