--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -116,6 +116,9 @@ Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.co
 {% block methodology_stat_1_title %}網站測試數{% endblock %}
 {% block methodology_stat_2_title %}數據處理數{% endblock %}
 {% block methodology_link %}瞭解統計方法{% endblock %}
+{% block methodology_description %}
+除另有備註外，Web Almanac 網路年鑑{{ supported_chapters | length }}個章節的統計指標皆萃取自HTTP Archive數據集。HTTP Archive是社群推動的專案，自2010年開始持續追蹤網路如何建置，每月透過WebPageTest和Lighthouse測試將{{ self.total_websites() }}個網站並將資料集公開置於BigQuery供眾分析。Web Almanac網路年鑑的統計指標採用{{ self.dataset() }}月的數據集為基準，更多的資訊請參閱統計方法頁面。
+{% endblock %}
 
 {% block introduction %}介紹{% endblock %}
 
