--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. Il est composé de {{ supported_chapters | length }} chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
+Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. L’édition 2019 se compose de {{ supported_chapters | length }} chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
 </p>
 {% endblock %}
 
@@ -109,7 +109,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% endif %}
 
 {% block contributors_description %}
-Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ self.contributors() }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition.
+Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ self.contributors() }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition du Web Almanac {{ year }}.
 {% endblock %}
 {% block contributors_link %}Voir les contributeurs et contributrices{% endblock %}
 
@@ -117,7 +117,7 @@ Le Web Almanac a été rendu possible grâce au travail acharné de la communaut
 {% block methodology_stat_2_title %}Données traitées{% endblock %}
 {% block methodology_link %}En savoir plus sur la Méthodologie{% endblock %}
 {% block methodology_description %}
-Sauf indication contraire, les statistiques des {{ supported_chapters | length }} chapitres du Web Almanac proviennent du jeu de données HTTP Archive, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de {{ self.total_websites() }} de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de {{ self.dataset() }} a servi de base aux mesures du Web Almanac. Pour plus d’informations, consultez la page Méthodologie.
+Sauf indication contraire, les statistiques des {{ supported_chapters | length }} chapitres du Web Almanac {{ year }} proviennent du jeu de données HTTP Archive, un projet communautaire qui suit l’évolution de la construction du web depuis 2010. Grâce à WebPageTest et Lighthouse, HTTP Archive collecte chaque mois les métadonnées de {{ self.total_websites() }} de sites Web et les insère dans une base de données publique BigQuery pour les analyser. Le jeu de données de {{ self.dataset() }} a servi de base aux mesures du Web Almanac {{ year }}. Pour plus d’informations, consultez la page Méthodologie.
 {% endblock %}
 
 {% block introduction %}Introduction{% endblock %}
