--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-我們的任務是結合網路社群的專業知識共同精萃HTTP Archive的原始數據與趨勢。Web Almanac 網路年鑑是網路狀態的綜合報告，由真實的數據和具信譽的網路專家支持。報告共有{{ supported_chapters | length }}個章節橫跨網頁內容、使用者體驗、網頁發佈、網頁傳遞的各個方面。
+我們的任務是結合網路社群的專業知識共同精萃HTTP Archive的原始數據與趨勢。Web Almanac 網路年鑑是網路狀態的綜合報告，由真實的數據和具信譽的網路專家支持。{{ year }}年版包括{{ supported_chapters | length }}個章節橫跨網頁內容、使用者體驗、網頁發佈、網頁傳遞的各個方面。
 </p>
 {% endblock %}
 
@@ -109,7 +109,7 @@
 {% endif %}
 
 {% block contributors_description %}
-Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.contributors() }} 位團隊成員志願挹注難以計數的泉源在規劃、研究、撰寫、發佈的各個階段。
+Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.contributors() }}位團隊{{ year }} Web Almanac成員志願挹注難以計數的泉源在規劃、研究、撰寫、發佈的各個階段。
 {% endblock %}
 {% block contributors_link %}認識貢獻者{% endblock %}
 
@@ -117,7 +117,7 @@ Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.co
 {% block methodology_stat_2_title %}數據處理數{% endblock %}
 {% block methodology_link %}瞭解統計方法{% endblock %}
 {% block methodology_description %}
-除另有備註外，Web Almanac 網路年鑑{{ supported_chapters | length }}個章節的統計指標皆萃取自HTTP Archive數據集。HTTP Archive是社群推動的專案，自2010年開始持續追蹤網路如何建置，每月透過WebPageTest和Lighthouse測試將{{ self.total_websites() }}個網站並將資料集公開置於BigQuery供眾分析。Web Almanac網路年鑑的統計指標採用{{ self.dataset() }}月的數據集為基準，更多的資訊請參閱統計方法頁面。
+除另有備註外，{{ year }} Web Almanac 網路年鑑{{ supported_chapters | length }}個章節的統計指標皆萃取自HTTP Archive數據集。HTTP Archive是社群推動的專案，自2010年開始持續追蹤網路如何建置，每月透過WebPageTest和Lighthouse測試將{{ self.total_websites() }}個網站並將資料集公開置於BigQuery供眾分析。{{ year }} Web Almanac網路年鑑的統計指標採用{{ self.dataset() }}月的數據集為基準，更多的資訊請參閱統計方法頁面。
 {% endblock %}
 
 {% block introduction %}介紹{% endblock %}
