--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. L’édition 2019 se compose de {{ supported_chapters | length }} chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
+Notre mission est de combiner les statistiques brutes et les tendances de HTTP Archive avec l’expertise de la communauté web. Le Web Almanac est un rapport complet sur l’état du Web, soutenu par des données réelles et des experts du Web. L’édition {{ year }} se compose de {{ supported_chapters | length }} chapitres couvrant l’expérience utilisateur, le contenu des pages, leur publication et leur distribution.
 </p>
 {% endblock %}
 
