--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -109,7 +109,7 @@
 {% endif %}
 
 {% block contributors_description %}
-Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.contributors() }}位團隊{{ year }} Web Almanac成員志願挹注難以計數的泉源在規劃、研究、撰寫、發佈的各個階段。
+Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.contributors() }} 位團隊成員志願挹注難以計數的泉源在規劃、研究、撰寫、發佈 {{ year }} Web Almanac 的各個階段。
 {% endblock %}
 {% block contributors_link %}認識貢獻者{% endblock %}
 
