--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -109,7 +109,7 @@
 {% endif %}
 
 {% block contributors_description %}
-Створення Web Almanac стало можливим завдяки важкій роботі веб-спільноти. {{ self.contributors() }} надзвичайних людей вклали безліч години у планування, дослідження, написання та продакшен Веб-альманаху {{ year }} року.
+Створення Web Almanac стало можливим завдяки важкій роботі веб-спільноти. {{ self.contributors() }} надзвичайних людей вклали безліч години у планування, дослідження, написання та продакшен Web Almanac {{ year }}.
 {% endblock %}
 {% block contributors_link %}Переглянути список контриб'юторів{% endblock %}
 
