--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -109,7 +109,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% endif %}
 
 {% block contributors_description %}
-Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ self.contributors() }} personnes ont consacré bénévolement d’innombrables heures à le planifier, faire des recherches, le rédiger et le mettre à votre disposition du Web Almanac {{ year }}.
+Le Web Almanac a été rendu possible grâce au travail acharné de la communauté Web. {{ self.contributors() }} personnes ont consacré bénévolement d’innombrables heures à planifier, faire des recherches, rédiger et mettre à votre disposition l'édition {{ year }} du Web Almanac.
 {% endblock %}
 {% block contributors_link %}Voir les contributeurs et contributrices{% endblock %}
 
