--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -109,7 +109,7 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% endif %}
 
 {% block contributors_description %}
-O Web Almanac Isso foi possível graças ao trabalho árduo da comunidade da web. {{ self.contributors() }} as pessoas ofereceram inúmeras horas nas fases de planejamento, pesquisa, redação e produção do Web Almanac {{ year }}.
+O Web Almanac só foi possível graças ao trabalho árduo da comunidade web. {{ self.contributors() }} pessoas ofereceram inúmeras horas nas fases de planejamento, pesquisa, redação e produção do Web Almanac {{ year }}.
 {% endblock %}
 {% block contributors_link %}Veja os colaboradores{% endblock %}
 
