--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -35,13 +35,13 @@
 <script nonce="{{ csp_nonce() }}">
 
 document.addEventListener("keyup", function onPress(event) {
-   if (event.key === 'p' || event.key === 'P' || event.key === ',' || event.key === '<' || event.key === 'ArrowLeft') {
+   if (event.key === 'p' || event.key === 'P' || event.key === ',' || event.key === '<') {
      var previous = document.getElementById('previous-chapter');
      if (previous) {
        previous.click();
      }
    }
-   if (event.key === 'n' || event.key === 'N' || event.key === '.' || event.key === '>' || event.key === 'ArrowRight') {
+   if (event.key === 'n' || event.key === 'N' || event.key === '.' || event.key === '>') {
      var next = document.getElementById('next-chapter');
      if (next) {
        next.click();
