--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-Наша місія - поєднати суху статистику і тренди від HTTP Archive з досвідом веб-спільноти. Web Almanac це всеосяжний звіт про стан вебу, підтриманий реальними даними та довіреними веб-експертами. Видання {{ year }} року складається з {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["розділ", "розділи", "розділів"]) }}, які охоплюють аспекти контенту сторінки, досвіду користування, публікації та розповсюдження.
+Наша місія - поєднати суху статистику і тренди від HTTP Archive з досвідом веб-спільноти. Web Almanac - це всеосяжний звіт про стан вебу, підтриманий реальними даними та довіреними веб-експертами. Видання {{ year }} року складається з {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["розділу", "розділів", "розділів"]) }}, які охоплюють аспекти контенту сторінки, досвіду користування, публікації та розповсюдження.
 </p>
 {% endblock %}
 
@@ -117,7 +117,7 @@
 {% block methodology_stat_2_title %}Оброблено даних{% endblock %}
 {% block methodology_link %}Дізнатися про нашу Методологію{% endblock %}
 {% block methodology_description %}
-Якщо не вказано інше, метрики в усіх {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["розділ", "розділи", "розділів"]) }} Web Almanac {{ year }} взяті з датасету HTTP Archive. HTTP Archive – це громадський проект, що відслідковує, як будується веб з 2010 року. Метадата про {{ self.total_websites() }} вебсайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac {{ year }} був використаний як базис набір даних від {{ self.dataset() }} року. Більше інформації на сторінці Методологія.
+Якщо не вказано інше, метрики в усіх {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["розділі", "розділах", "розділах"]) }} Web Almanac {{ year }} взяті з датасету HTTP Archive. HTTP Archive – це громадський проект, що відслідковує, як будується веб з 2010 року. Метадата про {{ self.total_websites() }} вебсайтів тестується щомісяця, використовуючи WebPageTest та Lighthouse, і додається до публічної бази даних BigQuery для аналізу. Для метрик Web Almanac {{ year }} був використаний як базис набір даних від {{ self.dataset() }} року. Більше інформації на сторінці Методологія.
 {% endblock %}
 
 {% block introduction %}Вступ{% endblock %}
