--- a/src/templates/ru/2019/contributors.html
+++ b/src/templates/ru/2019/contributors.html
@@ -4,7 +4,7 @@
 
 {% block description %}{{ config.contributors.items() | length }} {{ plural_ru(config.contributors.items() | length | int, ["человек", "человека", "человек"]) }}, внесших свой вклад в Web Almanac за 2019 год — это аналитики, авторы, участники мозговых штурмов, дизайнеры, разработчики, редакторы, руководители, проверяющие и переводчики.{% endblock %}
 
-{% block filter_by_team %}Фильтр по ролям в команде: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> из <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> {{ plural_ru(config.contributors.items() | length | int, ["участник", "участника", "участников"]) }}.{% endblock %}
+{% block filter_by_team %}Фильтр по ролям в команде: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> из <span id="contributors-total">{{ config.contributors.items() | length }}</span> {{ plural_ru(config.contributors.items() | length | int, ["участника", "участников", "участников"]) }}</span><span id="contributors-total-text-non-filtered"> {{ plural_ru(config.contributors.items() | length | int, ["участника", "участников", "участников"]) }}</span>.{% endblock %}
 {% block filter_by %}Отфильтровать по{% endblock %}
 
 {% block join_the_team_title%}Присоединяйтесь к команде Web Almanac{% endblock %}
