--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -20,7 +20,7 @@
 
 {% block mission %}
 <p>
-Наша задача — объединить необработанные статистические данные и тенденции HTTP Archive вместе со знаниями веб-сообщества. Web Almanac — это всеобъемлющий отчёт о состоянии веба, подкреплённый реальными данными и подтверждённый авторитетными веб-экспертами. Издание {{ year }} года состоит из {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["глава", "главы", "глав"]) }}, охватывающих такие аспекты, как содержание страниц, пользовательские ощущения, публикация и распространение информации.
+Наша задача — объединить необработанные статистические данные и тенденции HTTP Archive вместе со знаниями веб-сообщества. Web Almanac — это всеобъемлющий отчёт о состоянии веба, подкреплённый реальными данными и подтверждённый авторитетными веб-экспертами. Издание {{ year }} года состоит из {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["главы", "глав", "глав"]) }}, охватывающих такие аспекты, как содержание страниц, пользовательские ощущения, публикация и распространение информации.
 </p>
 {% endblock %}
 
@@ -117,7 +117,7 @@
 {% block methodology_stat_2_title %}Размер обработанных данных{% endblock %}
 {% block methodology_link %}Узнать подробнее про методологию{% endblock %}
 {% block methodology_description %}
-Если не указано иное, метрики во всех {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["глава", "главы", "глав"]) }} Web Almanac {{ year }} получены из набора данных HTTP Archive. HTTP Archive — это управляемый сообществом проект по исследованию веба с 2010 года. При помощи WebPageTest и Lighthouse ежемесячно проверяются метаданные {{ self.total_websites() }} сайтов, которые затем вносятся в общедоступную базу данных BigQuery для последующего анализа. В качестве основы для метрик Web Almanac {{ year }} был использован набор данных за {{ self.dataset() }} года. Дополнительную информацию смотрите на странице по методологии.
+Если не указано иное, метрики во всех {{ supported_chapters | length }} {{ plural_ru(supported_chapters | length | int, ["глава", "главах", "главах"]) }} Web Almanac {{ year }} получены из набора данных HTTP Archive. HTTP Archive — это управляемый сообществом проект по исследованию веба с 2010 года. При помощи WebPageTest и Lighthouse ежемесячно проверяются метаданные {{ self.total_websites() }} сайтов, которые затем вносятся в общедоступную базу данных BigQuery для последующего анализа. В качестве основы для метрик Web Almanac {{ year }} был использован набор данных за {{ self.dataset() }} года. Дополнительную информацию смотрите на странице по методологии.
 {% endblock %}
 
 {% block introduction %}Введение{% endblock %}
