--- a/src/templates/uk/2020/contributors.html
+++ b/src/templates/uk/2020/contributors.html
@@ -4,7 +4,7 @@
 
 {% block description %}{{ config.contributors.items() | length }} неймовірних {{ plural_ru(config.contributors.items() | length | int, ["людина", "людини", "людей"]) }},, які долучилися до створення Web Almanac {{ year }} як аналітики, автори, дизайнери, розробники, рецензенти, керівники, редактори та перекладачі.{% endblock %}
 
-{% block filter_by_team %}Фільтрувати за роллю в команді: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> з <span id="contributors-total">{{ config.contributors.items() | length }}</span></span> {{ plural_ru(config.contributors.items() | length | int, ["контриб'ютор", "контриб'ютори", "контриб'юторів"]) }}.{% endblock %}
+{% block filter_by_team %}Фільтрувати за роллю в команді: <span id="filtered-contributors">{{ self.contributors() }}</span><span id="contributors-total-text" class="hidden"> з <span id="contributors-total">{{ config.contributors.items() | length }}</span> {{ plural_ru(config.contributors.items() | length | int, ["контриб'ютор", "контриб'ютори", "контриб'юторів"]) }}</span><span id="contributors-total-text-non-filtered"> {{ plural_ru(config.contributors.items() | length | int, ["дописувач", "дописувачі", "дописувачів"]) }}</span>.{% endblock %}
 {% block filter_by %}Фільтрувати за{% endblock %}
 
 {% block join_the_team_title%}Приєднуйся до команди Web Almanac{% endblock %}
