Add watermark back to printed ebook (#1979)
* Update base_ebook.html

* Update generate_ebook_pdfs.js

* Update base_ebook.html

--- a/src/templates/base/base_ebook.html
+++ b/src/templates/base/base_ebook.html
@@ -33,6 +33,12 @@
   }
 {% elif request.args.get('cover') == None %}
 
+  {% if request.args.get('printer') != None %}
+  @page :first {
+    background: none;
+  }
+  {% endif %}
+
   @page {
 
     {% if request.args.get('printer') != None %}
@@ -252,12 +258,6 @@
   </section>
 
   {% else %}
-
-  <section class="no-header-or-footer">
-  </section>
-
-  <section class="no-header-or-footer">
-  </section>
 
   <section id="title" class="no-color no-header-or-footer">
 
