Better structured data

--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -63,7 +63,12 @@
 	  	      "url": "https://almanac.httparchive.org/static/images/ha.png",
 	  	      "height": 160,
 	  	      "width": 320
-	  	  }
+	  	  },
+        "sameas": [
+          "https://httparchive.org",
+          "https://twitter.com/HTTPArchive",
+          "https://github.com/HTTPArchive"
+          ]
       },
     "author":
       {{ self.author_structured_data() }},
