--- a/src/templates/en/2020/stories/page_content.html
+++ b/src/templates/en/2020/stories/page_content.html
@@ -606,11 +606,16 @@
         "@context": "http://schema.org",
         "publisher": {
             "@type": "Organization",
-            "name": "The 2020 Web Almanac",
+            "name": "HTTP Archive",
             "logo": {
                 "@type": "ImageObject",
-                "url": "/static/images/home-hero-2020-part-1.png"
-            }
+                "url": "/static/images/ha-60px.png"
+            },
+            "sameas": [
+              "https://httparchive.org",
+              "https://twitter.com/HTTPArchive",
+              "https://github.com/HTTPArchive"
+              ]
         },
         "@type": "Article",
         "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/page-content",
@@ -640,7 +645,7 @@
   </head>
   <body>
     <amp-story role="main" standalone publisher="The 2020 Web Almanac"
-      publisher-logo-src="/static/stories/web-almanac-2020-page-content/WA_Logo_2-96x96.png"
+      publisher-logo-src="/static/images/ha-square.png"
       title="Web Almanac Part I: Page Content"
       poster-portrait-src="/static/stories/web-almanac-2020-page-content/WA_Cover-Image_Part-I-640x853.jpg"
       poster-square-src="/static/stories/web-almanac-2020-page-content/WA_Cover-Image_Part-I-640x640.jpg"
