--- a/src/templates/en/2020/stories/user_experience.html
+++ b/src/templates/en/2020/stories/user_experience.html
@@ -544,11 +544,16 @@
     "@context": "http://schema.org",
     "publisher": {
       "@type": "Organization",
-      "name": "The 2020 Web Almanac",
+      "name": "HTTP Archive",
       "logo": {
         "@type": "ImageObject",
-        "url": "/static/images/home-hero-2020-part-2.png"
-      }
+        "url": "/static/images/ha-60px.png"
+      },
+      "sameas": [
+        "https://httparchive.org",
+        "https://twitter.com/HTTPArchive",
+        "https://github.com/HTTPArchive"
+        ]
     },
     "@type": "Article",
     "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/user-experience",
@@ -632,7 +637,7 @@ AMP optimization could not be completed due to the following:
 </head>
 <body>
 <amp-story role="main" standalone publisher="The 2020 Web Almanac"
-  publisher-logo-src="/static/stories/web-almanac-2020-user-experience/WA_Logo_2-96x96.png"
+  publisher-logo-src="/static/images/ha-square.png"
   title="Web Almanac Part II: User Experience"
   poster-portrait-src="/static/stories/web-almanac-2020-user-experience/WA_Cover-Image_Part-II-640x853.jpg"
   poster-square-src="/static/stories/web-almanac-2020-user-experience/WA_Cover-Image_Part-II-640x640.jpg"
