--- a/src/templates/en/2020/stories/content_publishing.html
+++ b/src/templates/en/2020/stories/content_publishing.html
@@ -543,11 +543,16 @@
       "@context": "http://schema.org",
       "publisher": {
         "@type": "Organization",
-        "name": "The 2020 Web Almanac",
+        "name": "HTTP Archive",
         "logo": {
           "@type": "ImageObject",
-          "url": "/static/images/home-hero-2020-part-3.png"
-        }
+          "url": "/static/images/ha-60px.png"
+        },
+        "sameas": [
+          "https://httparchive.org",
+          "https://twitter.com/HTTPArchive",
+          "https://github.com/HTTPArchive"
+          ]
       },
       "@type": "Article",
       "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/content-publishing",
@@ -574,7 +579,7 @@
 </head>
 <body>
   <amp-story role="main" standalone publisher="The 2020 Web Almanac"
-             publisher-logo-src="/static/stories/web-almanac-2020-content-publishing/logo_web_creators-96x96.png"
+             publisher-logo-src="/static/images/ha-square.png"
              title="Web Almanac Part III: Content Publishing"
              poster-portrait-src="/static/stories/web-almanac-2020-content-publishing/WA_Cover-Image_Part-III-640x853.jpg"
              poster-square-src="/static/stories/web-almanac-2020-content-publishing/WA_Cover-Image_Part-III-640x640.jpg"
