Even better structured data

--- a/src/templates/en/2020/stories/content_distribution.html
+++ b/src/templates/en/2020/stories/content_distribution.html
@@ -511,7 +511,7 @@
   <meta name="description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part four is all about content distribution.">
   <meta property="og:locale" content="en-US">
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Web Almanac Part IV: Content Distribution">
+  <meta property="og:title" content="Web Almanac 2020 Part IV: Content Distribution">
   <meta property="og:url" content="https://almanac.httparchive.org/en/2020/stories/content-distribution">
   <meta property="og:site_name" content="The 2020 Web Almanac">
   <meta property="og:description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part four is all about content distribution.">
@@ -522,7 +522,7 @@
   <meta property="og:image:height" content="675">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@HTTPArchive">
-  <meta name="twitter:title" content="Web Almanac Part IV: Content Distribution">
+  <meta name="twitter:title" content="Web Almanac 2020 Part IV: Content Distribution">
   <meta name="twitter:image" content="https://almanac.httparchive.org/static/images/home-hero-2020-part-4.png">
   <meta name="twitter:image:alt" content="Web Almanac Part IV: Content Distribution - The 2020 Web Almanac" />
   <meta name="twitter:description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part one is all about page content.">
@@ -556,7 +556,7 @@
       },
       "@type": "Article",
       "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/content-distribution",
-      "headline": "Web Almanac Part IV: Content Distribution",
+      "headline": "Web Almanac 2020 Part IV: Content Distribution",
       "datePublished": "{{ date_published }}",
       "dateModified": "{{ date_modified }}",
       "author": {
@@ -578,9 +578,9 @@
   </noscript>
 </head>
 <body>
-  <amp-story role="main" standalone publisher="The 2020 Web Almanac"
+  <amp-story role="main" standalone publisher="HTTP Archive"
            publisher-logo-src="/static/images/ha-square.png"
-           title="Web Almanac Part IV: Content Distribution"
+           title="Web Almanac 2020 Part IV: Content Distribution"
            poster-portrait-src="/static/stories/web-almanac-2020-content-distribution/WA_Cover-Image_Part-IV-640x853.jpg"
            poster-square-src="/static/stories/web-almanac-2020-content-distribution/WA_Cover-Image_Part-IV-640x640.jpg"
            poster-landscape-src="/static/stories/web-almanac-2020-content-distribution/WA_Cover-Image_Part-IV-660x640.jpg" class="i-amphtml-layout-container" i-amphtml-layout="container">
