--- a/src/templates/en/2020/stories/user_experience.html
+++ b/src/templates/en/2020/stories/user_experience.html
@@ -511,7 +511,7 @@
   <meta name="description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part two is all about user experience.">
   <meta property="og:locale" content="en-US">
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Web Almanac Part II: User Experience">
+  <meta property="og:title" content="Web Almanac 2020 Part II: User Experience">
   <meta property="og:url" content="https://almanac.httparchive.org/en/2020/stories/user-experience">
   <meta property="og:site_name" content="The 2020 Web Almanac">
   <meta property="og:description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part two is all about user experience.">
@@ -557,7 +557,7 @@
     },
     "@type": "Article",
     "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/user-experience",
-    "headline": "Web Almanac Part II: User Experience",
+    "headline": "Web Almanac 2020 Part II: User Experience",
     "datePublished": "{{ date_published }}",
     "dateModified": "{{ date_modified }}",
     "author": {
@@ -636,9 +636,9 @@ AMP optimization could not be completed due to the following:
 -->
 </head>
 <body>
-<amp-story role="main" standalone publisher="The 2020 Web Almanac"
+<amp-story role="main" standalone publisher="HTTP Archive"
   publisher-logo-src="/static/images/ha-square.png"
-  title="Web Almanac Part II: User Experience"
+  title="Web Almanac 2020 Part II: User Experience"
   poster-portrait-src="/static/stories/web-almanac-2020-user-experience/WA_Cover-Image_Part-II-640x853.jpg"
   poster-square-src="/static/stories/web-almanac-2020-user-experience/WA_Cover-Image_Part-II-640x640.jpg"
   poster-landscape-src="/static/stories/web-almanac-2020-user-experience/WA_Cover-Image_Part-II-660x640.jpg" class="i-amphtml-layout-container" i-amphtml-layout="container">
