Change height of AMP stories (#1983)
* Change height of AMP stories

* Better structured data

* Even better structured data

--- a/src/templates/en/2020/stories/page_content.html
+++ b/src/templates/en/2020/stories/page_content.html
@@ -572,7 +572,7 @@
     <meta name="description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part one is all about page content.">
     <meta property="og:locale" content="en-US">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Web Almanac Part I: Page Content">
+    <meta property="og:title" content="Web Almanac 2020 Part I: Page Content">
     <meta property="og:url" content="https://almanac.httparchive.org/en/2020/stories/page-content">
     <meta property="og:site_name" content="The 2020 Web Almanac">
     <meta property="og:description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part one is all about page content.">
@@ -580,10 +580,10 @@
     <meta property="article:modified_time" content="{{ date_modified }}">
     <meta property="og:image" content="https://almanac.httparchive.org/static/images/home-hero-2020-part-1.png">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="600">
+    <meta property="og:image:height" content="675">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@HTTPArchive">
-    <meta name="twitter:title" content="Web Almanac Part I: Page Content">
+    <meta name="twitter:title" content="Web Almanac 2020 Part I: Page Content">
     <meta name="twitter:image" content="https://almanac.httparchive.org/static/images/home-hero-2020-part-1.png">
     <meta name="twitter:image:alt" content="Web Almanac Part I: Page Content - The 2020 Web Almanac" />
     <meta name="twitter:description" content="The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. Part one is all about page content.">
@@ -606,15 +606,20 @@
         "@context": "http://schema.org",
         "publisher": {
             "@type": "Organization",
-            "name": "The 2020 Web Almanac",
+            "name": "HTTP Archive",
             "logo": {
                 "@type": "ImageObject",
-                "url": "/static/images/home-hero-2020-part-1.png"
-            }
+                "url": "/static/images/ha-60px.png"
+            },
+            "sameas": [
+              "https://httparchive.org",
+              "https://twitter.com/HTTPArchive",
+              "https://github.com/HTTPArchive"
+              ]
         },
         "@type": "Article",
         "mainEntityOfPage": "https://almanac.httparchive.org/en/2020/stories/page-content",
-        "headline": "Web Almanac Part I: Page Content",
+        "headline": "Web Almanac 2020 Part I: Page Content",
         "datePublished": "{{ date_published }}",
         "dateModified": "{{ date_modified }}",
         "author": {
@@ -639,9 +644,9 @@
     -->
   </head>
   <body>
-    <amp-story role="main" standalone publisher="The 2020 Web Almanac"
-      publisher-logo-src="/static/stories/web-almanac-2020-page-content/WA_Logo_2-96x96.png"
-      title="Web Almanac Part I: Page Content"
+    <amp-story role="main" standalone publisher="HTTP Archive"
+      publisher-logo-src="/static/images/ha-square.png"
+      title="Web Almanac 2020 Part I: Page Content"
       poster-portrait-src="/static/stories/web-almanac-2020-page-content/WA_Cover-Image_Part-I-640x853.jpg"
       poster-square-src="/static/stories/web-almanac-2020-page-content/WA_Cover-Image_Part-I-640x640.jpg"
       poster-landscape-src="/static/stories/web-almanac-2020-page-content/WA_Cover-Image_Part-I-640x640.jpg" class="i-amphtml-layout-container" i-amphtml-layout="container">
