--- a/src/templates/base/accessibility_statement.html
+++ b/src/templates/base/accessibility_statement.html
@@ -47,7 +47,7 @@
   <nav class="index">
     <div class="index-box floating-card">
       <h2 class="header">
-        <button class="index-btn">{{ self.index_title() }}</button>
+        <button type="button" class="index-btn">{{ self.index_title() }}</button>
         <span class="no-button">{{ self.index_title() }}</span>
       </h2>
       {{ self.index() }}
@@ -55,7 +55,7 @@
   </nav>
 
   <article id="maincontent" class="content">
-      
+
     {{ self.main_content() }}
 
   </article>
