--- a/src/templates/base/methodology.html
+++ b/src/templates/base/methodology.html
@@ -14,7 +14,7 @@
   <nav class="index">
     <div class="index-box floating-card">
       <h2 class="header">
-        <button class="index-btn">{{ self.index_title() }}</button>
+        <button type="button" class="index-btn">{{ self.index_title() }}</button>
         <span class="no-button">{{ self.index_title() }}</span>
       </h2>
       {{ self.index() }}
