--- a/src/templates/en/2020/methodology.html
+++ b/src/templates/en/2020/methodology.html
@@ -471,7 +471,7 @@
       </p>
 
       <p>
-        If you&#8217;re interested in contributing to the 2021 edition of the Web Almanac, please fill out our <a href="https://forms.gle/VRBFegGAP7d99Bhp7">interest form</a>. Let's work together to track the state of the web!
+        If you&#8217;re interested in contributing to the 2021 edition of the Web Almanac, please fill out our <a href="https://forms.gle/VRBFegGAP7d99Bhp7">interest form</a>. Let&#8217;s work together to track the state of the web!
       </p>
     </section>
 {% endblock main_content %}
