--- a/src/templates/en/accessibility_statement.html
+++ b/src/templates/en/accessibility_statement.html
@@ -59,7 +59,7 @@
         </p>
 
         <p>
-          The Web Almanac's purpose is to provide detailed information about the status of the web. While we aim to ensure all content is easily read even by non-experts, the nature of the material may mean there may be a level of expertise and technology understanding needed to understand some chapters and some metrics, which may not meet the <a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 level AAA reading level guidelines</a>.
+          The Web Almanac&#8217;s purpose is to provide detailed information about the status of the web. While we aim to ensure all content is easily read even by non-experts, the nature of the material may mean there may be a level of expertise and technology understanding needed to understand some chapters and some metrics, which may not meet the <a href="https://www.w3.org/WAI/WCAG21/quickref/#reading-level">WCAG 2.1 level AAA reading level guidelines</a>.
         </p>
 
         <p>
