--- a/src/templates/nl/2019/methodology.html
+++ b/src/templates/nl/2019/methodology.html
@@ -75,7 +75,7 @@
         </p>
 
         <p class="note">
-          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Voor hulp bij het beheersen van uw uitgaven raadpleegt u Tim Kadlec's bericht <a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de Bank te breken</a>.
+          Houd er rekening mee dat sommige van deze zoekopdrachten vrij groot zijn en <a href="https://cloud.google.com/bigquery/pricing">duur</a> kunnen zijn om zelf uit te voeren, aangezien BigQuery wordt gefactureerd per terabyte. Voor hulp bij het beheersen van uw uitgaven raadpleegt u Tim Kadlec&#8217;s bericht <a href="https://timkadlec.com/remembers/2019-12-10-using-bigquery-without-breaking-the-bank/">BigQuery gebruiken zonder de Bank te breken</a>.
         </p>
 
         <p>
