--- a/src/templates/nl/base_ebook.html
+++ b/src/templates/nl/base_ebook.html
@@ -3,7 +3,7 @@
 {% block title %}De {{ year }} Web Almanac door HTTP Archive{% endblock %}
 
 {% block intro_title %}<span class="intro-year">{{ year }}</span><br>Web Almanac{% endblock %}
-{% block intro_sub_title %}HTTP Archive's jaarlijkse<br><b>staat van het web</b> rapport{% endblock %}
+{% block intro_sub_title %}HTTP Archive&#8217;s jaarlijkse<br><b>staat van het web</b> rapport{% endblock %}
 
 {% block about_title %}Over De Web Almanac{% endblock %}
 
