--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block intro_title %}Web Almanac{% endblock %}
-{% block intro_sub_title %}HTTP Archive's jaarlijkse<br><b>staat van het web</b>rapport{% endblock %}
+{% block intro_sub_title %}HTTP Archive&#8217;s jaarlijkse<br><b>staat van het web</b>rapport{% endblock %}
 
 {% block mission %}
 <p>
