Add image variants and height and width details

--- a/src/templates/en/2020/stories/page_content.html
+++ b/src/templates/en/2020/stories/page_content.html
@@ -609,7 +609,9 @@
             "name": "HTTP Archive",
             "logo": {
                 "@type": "ImageObject",
-                "url": "/static/images/ha-60px.png"
+                "url": "https://almanac.httparchive.org/static/images/ha-60px.png",
+                "width": 120,
+                "height": 60
             },
             "sameas": [
               "https://httparchive.org",
@@ -631,7 +633,26 @@
               ],
             "name": "Rick Viscomi"
         },
-        "image": "/static/images/home-hero-2020-part-1.png"
+        "image": [
+          {
+            "@type":"ImageObject",
+            "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-1.png"
+            "width": 1200,
+            "height": 675
+          },
+          {
+            "@type":"ImageObject",
+            "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-3-1200x900.png",
+            "width": 1200,
+            "height": 900
+          },
+          {
+            "@type":"ImageObject",
+            "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-3-1200x1200.png",
+            "width": 1200,
+            "height": 1200
+          }
+        ]
       }
     </script>
     <link rel="canonical" href="https://almanac.httparchive.org/en/2020/stories/page-content">
