--- a/src/templates/en/2020/stories/user_experience.html
+++ b/src/templates/en/2020/stories/user_experience.html
@@ -547,7 +547,9 @@
       "name": "HTTP Archive",
       "logo": {
         "@type": "ImageObject",
-        "url": "/static/images/ha-60px.png"
+        "url": "https://almanac.httparchive.org/static/images/ha-60px.png",
+        "width": 120,
+        "height": 60
       },
       "sameas": [
         "https://httparchive.org",
@@ -569,8 +571,28 @@
         ],
       "name": "Rick Viscomi"
     },
-    "image": "/static/images/home-hero-2020-part-2.png"
-  }</script>
+    "image": [
+      {
+        "@type":"ImageObject",
+        "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-2.png",
+        "width": 1200,
+        "height": 675
+      },
+      {
+        "@type":"ImageObject",
+        "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-2-1200x900.png",
+        "width": 1200,
+        "height": 900
+      },
+      {
+        "@type":"ImageObject",
+        "url":"https://almanac.httparchive.org/static/images/home-hero-2020-part-2-1200x1200.png",
+        "width": 1200,
+        "height": 1200
+      }
+    ]
+  }
+  </script>
   <link rel="canonical" href="https://almanac.httparchive.org/en/2020/stories/user-experience">
   <style amp-boilerplate>body {
     -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
